--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <p>Monitor shortages/excesses after fuel sales.</p>
     </div>
     <div class="card">
-      <a href="./product/">📦 Product Analysis Dashboard</a>
+      <a href="./Product/">📦 Product Analysis Dashboard</a>
       <p>Analyze product performance.</p>
     </div>
   </div>
