--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     <div class="card">
       <a href="./ProductDashboard/">📦 Product Analysis Dashboard</a>
-      <p>Analyze product performance and inventory.</p>
+      <p>Analyze product performance.</p>
     </div>
   </div>
 
