--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 
   <div class="card-container">
     <div class="card">
-      <a href="./Fuel/">⛽ Fuel Per Pump Analysis</a>
+      <a href="./fuel/">⛽ Fuel Per Pump Analysis</a>
       <p>Track performance per pump.</p>
     </div>
     <div class="card">
-      <a href="./Staff/">👥 Staff Shortages Dashboard</a>
+      <a href="./staff/">👥 Staff Shortages Dashboard</a>
       <p>Monitor shortages/excesses after fuel sales.</p>
     </div>
     <div class="card">
