--- a/staff/index.html
+++ b/staff/index.html
@@ -195,6 +195,7 @@
       margin-bottom: 30px;
       box-shadow: 0 5px 20px rgba(0,0,0,0.1);
       position: relative;
+      height: 350px;
     }
     
     .chart-header {
