--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
       <div class="company-icon">⚡</div>
       <h1>Kiryan Energy Ltd</h1>
       <h2>Mangu Shell Service Station</h2>
-      <p class="subtitle">Advanced Analytics & Performance Dashboards</p>
+      <p class="subtitle">Performance Analytics Dashboards</p>
     </div>
 
     <div class="status-bar">
@@ -344,7 +344,7 @@
         <div class="status-indicator"></div>
       </div>
       <div class="status-item">
-        <div class="status-value" data-target="5709">5,709L</div>
+        <div class="status-value" data-target="5779">5,779.68L</div>
         <div class="status-label">Avg. Litres/Day</div>
         <div class="status-indicator"></div>
       </div>
@@ -363,7 +363,7 @@
         <a href="./staff/" class="card-link">
           <span class="card-icon">👥</span>
           <div class="card-title">Staff Management Dashboard</div>
-          <div class="card-description">Monitor staff performance, shortages, and operational efficiency with comprehensive workforce analytics.</div>
+          <div class="card-description">Monitor staff performance, shortages, and operational efficiency.</div>
         </a>
       </div>
       
@@ -371,7 +371,7 @@
         <a href="./Product/" class="card-link">
           <span class="card-icon">📊</span>
           <div class="card-title">Product Analysis Dashboard</div>
-          <div class="card-description">Comprehensive product performance analysis with sales trends and inventory management insights.</div>
+          <div class="card-description">Comprehensive product performance analysis with sales trends.</div>
         </a>
       </div>
     </div>
