--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         <div class="status-indicator"></div>
       </div>
       <div class="status-item">
-        <div class="status-value" data-target="5779">5,779.68L</div>
+        <div class="status-value" data-target="5738">5,738.56</div>
         <div class="status-label">Avg. Litres/Day</div>
         <div class="status-indicator"></div>
       </div>
