--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
     .card:nth-child(1) { animation-delay: 0.1s; }
     .card:nth-child(2) { animation-delay: 0.2s; }
     .card:nth-child(3) { animation-delay: 0.3s; }
+    .card:nth-child(4) { animation-delay: 0.4s; }
 
     @keyframes fadeInUp {
       from { transform: translateY(20px); opacity: 0; }
@@ -339,8 +340,8 @@
         <div class="status-indicator"></div>
       </div>
       <div class="status-item">
-        <div class="status-value" data-target="3">3</div>
-        <div class="status-label">Active Pumps</div>
+        <div class="status-value" data-target="4">4</div>
+        <div class="status-label">Active Stations</div>
         <div class="status-indicator"></div>
       </div>
       <div class="status-item">
@@ -372,6 +373,14 @@
           <span class="card-icon">📊</span>
           <div class="card-title">Product Analysis Dashboard</div>
           <div class="card-description">Comprehensive product performance analysis with sales trends.</div>
+        </a>
+      </div>
+      
+      <div class="card">
+        <a href="./Gas/" class="card-link">
+          <span class="card-icon">🔥</span>
+          <div class="card-title">Gas Operations Dashboard</div>
+          <div class="card-description">Monitor gas cylinder sales, inventory levels, and distribution metrics.</div>
         </a>
       </div>
     </div>
@@ -442,4 +451,3 @@
   </script>
 </body>
 </html>
-
