--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         <a href="./Gas/" class="card-link">
           <span class="card-icon">🔥</span>
           <div class="card-title">Gas Operations Dashboard</div>
-          <div class="card-description">Monitor gas cylinder sales, inventory levels, and distribution metrics.</div>
+          <div class="card-description">Monitor gas cylinder sales, and distribution metrics.</div>
         </a>
       </div>
     </div>
